# agentic-dc-motor-control

./: .dockerignore  .env.example  .gitignore  CONTINUITY_PROMPT_NEXT_CHAT.md  Dockerfile  Lab_01.ipynb  Lab_02.ipynb  PROJECT_SEQUENCE.txt  README.md  alembic.ini  docker-compose.yml  pyproject.toml
agents/: __init__.py  certify.py  controller_registry.py  controllers_advanced.py  critic.py  design_agent.py  design_candidate.py  domain_guard.py  orchestrator.py  pid_tuner.py  plant_agent.py  spec_agent.py  specialists.py  workflow.py
dc_motor/: __init__.py  controllers.py  evaluate.py  failure.py  feasibility.py  metrics.py  motor_model.py  plant.py  registry.py  scenarios.py  specs.py  state_space.py
examples/: _util.py  lab_01_plant_pid.py  lab_02_evaluation.py  lab_03_spec_agent.py  lab_04_pid_tuner.py  lab_05_orchestrator.py  lab_06_uncertainty.py  lab_07_specialists_certify.py  lab_08_ablation.py
experiments/: __init__.py  ablation.py
saas/: __init__.py  api.py  auth.py  clarify.py  config.py  db.py  events.py  feedback.py  jobs.py  models.py  present.py  queue.py  ratelimit.py  repository.py  serialization.py  service.py  ui_streamlit.py
saas/migrations/: env.py
saas/migrations/versions/: 9f31d5435fda_initial_schema.py
scripts/: seed_spec.py
tests/: conftest.py  test_api.py  test_async_runs.py  test_auth.py  test_certify.py  test_controller_registry.py  test_controllers_advanced.py  test_design_agent.py  test_domain_guard.py  test_evaluate.py  test_events.py  test_failure_digest.py  test_feasibility.py  test_motor_model.py  test_orchestrator.py  test_orchestrator_actions.py  test_persistence.py  test_registry.py  test_saas.py  test_specs.py  test_workflow.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ArtifactPanel.tsx  ChatPane.tsx  Copilot.tsx  CopyButton.tsx  MarkdownMessage.tsx  SessionHistory.tsx  TopBar.tsx  ui.tsx
web/components/artifacts/: ExportTab.tsx  FeasibilityTab.tsx  MotorTab.tsx  RequirementsTab.tsx  ResultsTab.tsx  TrajectoryChart.tsx
web/lib/: api.ts  clipboard.ts  format.ts  sse.ts  types.ts
