[project]
name = "agentic-dc-motor-control"
version = "0.1.0"
description = "Agentic orchestration of DC motor control — from plant model to certified simulation export"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "control>=0.10.1",
    "cvxpy>=1.5.0",
    "fastapi>=0.115.0",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "osqp>=0.6.7",
    "python-dotenv>=1.2.2",
    "scipy>=1.18.0",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dc_motor", "agents", "experiments", "saas"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
dc-copilot-api = "saas.api:main"
